[tool.bandit]
[tool.ruff]
line-length = 100
target-version = 'py312'
exclude = [
    'src/hd_active/ui/forms',
    '.venv*',
    'venv*',
    '.git',
    '.github',
    'assets',
    'build',
    'dist',
    'docs',
    'site',
    '__pycache__',
]

[tool.ruff.lint]
select = ['E', 'F', 'W', 'I']
extend-ignore = ['E203', 'E701', 'F811']

[tool.ruff.format]
quote-style = 'single'

[tool.pytest.ini_options]
# Markers: See documentation on what markers represent.
markers = ['windows']
testpaths = ['tests']

[tool.mypy]
# Technical notes on exclusions:
# 1 The regex for all folders needs to be in a one line string.
# 2 The `.` doesn't need to be escaped. Escape with `\\.` for a fully compatible regex.
exclude = '^venv*|^.venv*|.git|.eggs|build|dist|.cache|.pytest_cache|.mypy_cache|.vscode|.idea|tasks.py|src/ui/forms'
python_version = '3.12'
warn_return_any = true
warn_unused_configs = true
# Let mypy find modules inside the 'src' directory when importing 'hd_active'.
mypy_path = 'src'
# Disable the warning below, from type hinting variables in a function.
# By default, the bodies of untyped functions are not checked, consider using --check-untyped-defs
disable_error_code = 'annotation-unchecked'

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ['factory', 'pytest_check', 'pytest_params', 'PySide6.*']

[tool.typer-invoke]
# Paths from where `pyproject.toml` is located (root of project)
modules = [
    'admin.build',
    'admin.docs',
    'admin.lint',
    'admin.pip',
    'admin.precommit',
    'admin.test',
    'admin.ui',
]
no_args_is_help = true
add_completion = false
rich_markup_mode = 'markdown'
log_level = 'INFO'
log_format = '%(message)s'

[build-system]
requires = ['uv_build>=0.10.4,<0.11.0']
build-backend = 'uv_build'

[tool.uv.build-backend]
module-name = 'hd_active'

[project]
name = 'hd_active'
version = '0.2.0'
description = 'Prevent external HDs from becoming inactive (sleeping).'
readme = 'README.md'
authors = [{name = 'Joao Coelho'}]
license = {file = 'LICENSE.txt'}
dependencies = ['pyside6']
requires-python = '>=3.12,<=3.15'
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Home = 'https://github.com/joaonc/hd_active'
Documentation = 'https://joaonc.github.io/hd_active'

[project.scripts]
hd_active = 'hd_active.main:main'
[dependency-groups]
dev = [
    'bandit',
    'mypy',
    'pre-commit',
    'pyinstaller',
    'pytest',
    'pytest-params',
    'pytest-qt',
    'ruff',
    'typer',
    'typer-invoke',
    'uv',
]
docs = [
    'mdx_truly_sane_lists',
    'mkdocs',
    'mkdocs-glightbox',
    'mkdocs-material',
]

[tool.uv]
default-groups = ['dev']

